tests/e2e/array_index_float.error
Error: syntax error in story at line 2, column 4

2|    a[0.5] = 5
         ^

E0041: `.` is not allowed here
