tests/e2e/array_index_float.story
a = [0, 1, 2]
a[0.5] = 5
